--- a/example/Demo_Database_FileSystem.ipynb
+++ b/example/Demo_Database_FileSystem.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "from ndi import Experiment, DaqSystem, FileNavigator\n",
     "from ndi.daqreaders import MockReader\n",
-    "from ndi.database import FileSystem as Database"
+    "from ndi.database import FileSystem as Database, Query as Q"
    ]
   },
   {
@@ -123,7 +123,7 @@
     }
    ],
    "source": [
-    "e2 == db.find(Experiment,{'name':'myExperiment3'})[0]"
+    "e2 == db.find(Experiment,Q('name') == 'myExperiment3')[0]"
    ]
   },
   {
@@ -143,7 +143,7 @@
     }
    ],
    "source": [
-    "db.find(Experiment, {'name':'myExperiment2'})"
+    "db.find(Experiment, Q('name') == 'myExperiment2')"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_results = db.find(DaqSystem, {'experiment_id':e.id})"
+    "ds_results = db.find(DaqSystem, Q('experiment_id') == e.id)"
    ]
   },
   {
@@ -164,7 +164,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<ndi.daq_system.DaqSystem object at 0x118166390>, <ndi.daq_system.DaqSystem object at 0x11816a310>]\n"
+      "[<ndi.daq_system.DaqSystem object at 0x1150e3a60>, <ndi.daq_system.DaqSystem object at 0x1150e3820>]\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.experiment.Experiment at 0x118145190>]"
+       "[<ndi.experiment.Experiment at 0x11510fcd0>]"
       ]
      },
      "execution_count": 15,
@@ -279,7 +279,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File '../test_exp/.ndi/daqsystems/139e447af28d4bf3906390c200617862.dat' already exists\n"
+      "File '../test_exp/.ndi/daqsystems/90a1ca556083422dadc47185bdc79b57.dat' already exists\n"
      ]
     }
    ],
@@ -360,7 +360,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a not of type 'NDI_Object'\n"
+      "'a' is not an instance of an 'NDI_Object' child class.\n"
      ]
     }
    ],
@@ -395,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
