--- a/example/Demo_Query_FileSystem.ipynb
+++ b/example/Demo_Query_FileSystem.ipynb
@@ -90,9 +90,9 @@
      "output_type": "stream",
      "text": [
       "Probe6\n",
+      "Probe9\n",
       "Probe5\n",
       "Probe8\n",
-      "Probe9\n",
       "Probe7\n"
      ]
     }
@@ -111,7 +111,7 @@
     {
      "data": {
       "text/plain": [
-       "<OrQuery [<Query ('reference', 'greater_than', 4)>, <Query ('reference', 'less_than_or_equal_to', 2)>]>"
+       "<OrQuery [<Query ('reference', '>', 4)>, <Query ('reference', '<=', 2)>]>"
       ]
      },
      "execution_count": 8,
@@ -134,11 +134,11 @@
      "output_type": "stream",
      "text": [
       "Probe6\n",
-      "Probe5\n",
-      "Probe8\n",
       "Probe2\n",
+      "Probe9\n",
       "Probe1\n",
-      "Probe9\n"
+      "Probe5\n",
+      "Probe8\n"
      ]
     }
    ],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -158,9 +158,9 @@
      "output_type": "stream",
      "text": [
       "Probe6\n",
+      "Probe9\n",
       "Probe5\n",
-      "Probe8\n",
-      "Probe9\n"
+      "Probe8\n"
      ]
     }
    ],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -181,12 +181,12 @@
      "output_type": "stream",
      "text": [
       "fiodjwfodw\n",
-      "Probe3\n",
-      "fiodjwfodw\n",
-      "fiodjwfodw\n",
       "Probe2\n",
-      "Probe1\n",
+      "fiodjwfodw\n",
       "Probe4\n",
+      "Probe1\n",
+      "fiodjwfodw\n",
+      "Probe3\n",
       "fiodjwfodw\n",
       "Probe7\n"
      ]
@@ -204,16 +204,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probe3\n",
       "Probe2\n",
-      "Probe1\n"
+      "Probe1\n",
+      "Probe3\n"
      ]
     }
    ],
@@ -242,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
