--- a/example/Demo_Database_SQL_Pipeline.ipynb
+++ b/example/Demo_Database_SQL_Pipeline.ipynb
@@ -107,8 +107,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "channels = db.find(Channel)\n",
-    "print(channels)"
+    "def show_all_in_tables():\n",
+    "    tables = [('Experiments', Experiment), \n",
+    "             ('DAQ systems', DaqSystem), \n",
+    "             ('Probes', Probe), \n",
+    "             ('Epochs', Epoch), \n",
+    "             ('Channels', Channel)]\n",
+    "    for header, ndi_class in tables:\n",
+    "        items = db.find(ndi_class)\n",
+    "\n",
+    "        print(header)\n",
+    "        for x in items:\n",
+    "            print(x)\n",
+    "        print('----------')"
    ]
   },
   {
@@ -117,14 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "probes = db.find(Probe)\n",
-    "epochs = db.find(Epoch)\n",
-    "daq_systems = db.find(DaqSystem)\n",
-    "for name, items in [('DAQ systems', daq_systems), ('Probes', probes), ('Epochs', epochs)]:\n",
-    "    print(name)\n",
-    "    for x in items: print(x)\n",
-    "    print('---\\n')\n",
-    "    "
+    "show_all_in_tables()"
    ]
   },
   {
@@ -133,10 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db.delete(channels)\n",
-    "db.delete(probes)\n",
-    "db.delete(epochs)\n",
-    "db.delete(daq_systems)\n",
+    "print('DELETING:', experiments)\n",
     "db.delete(experiments)"
    ]
   },
@@ -145,7 +146,21 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "show_all_in_tables()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.add_experiment(e)\n",
+    "print('\\n**DELETE PROBES**\\n')\n",
+    "db.delete(db.find(Probe))\n",
+    "show_all_in_tables()"
+   ]
   }
  ],
  "metadata": {
