--- a/example/Demo_API_SQL.ipynb
+++ b/example/Demo_API_SQL.ipynb
@@ -111,9 +111,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Probe at 0x10f61ffd0>,\n",
-       " <ndi.core.Probe at 0x1034bc3a0>,\n",
-       " <ndi.core.Probe at 0x11c7d9910>]"
+       "[<ndi.core.Probe at 0x117e8d670>,\n",
+       " <ndi.core.Probe at 0x124f84d90>,\n",
+       " <ndi.core.Probe at 0x12502c340>]"
       ]
      },
      "execution_count": 9,
@@ -155,9 +155,9 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.document.Document at 0x11c7634f0>,\n",
-       " <ndi.document.Document at 0x11c763dc0>,\n",
-       " <ndi.document.Document at 0x11c7631f0>]"
+       "[<ndi.document.Document at 0x1250116a0>,\n",
+       " <ndi.document.Document at 0x125011520>,\n",
+       " <ndi.document.Document at 0x125011820>]"
       ]
      },
      "execution_count": 11,
@@ -178,23 +178,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No DAQ reader set to <ndi.core.Channel object at 0x11c7c0730>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x11c7d92e0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x11c7d93d0>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x11c7e8f40>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x11c727610>.\n",
-      "No DAQ reader set to <ndi.core.Channel object at 0x11c727c40>.\n"
+      "No DAQ reader set to <ndi.core.Channel object at 0x10bcc3820>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x10bcc32e0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x125011970>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x1250563a0>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x125056550>.\n",
+      "No DAQ reader set to <ndi.core.Channel object at 0x125056280>.\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Channel at 0x11c7c0730>,\n",
-       " <ndi.core.Channel at 0x11c7d92e0>,\n",
-       " <ndi.core.Channel at 0x11c7d93d0>,\n",
-       " <ndi.core.Channel at 0x11c7e8f40>,\n",
-       " <ndi.core.Channel at 0x11c727610>,\n",
-       " <ndi.core.Channel at 0x11c727c40>]"
+       "[<ndi.core.Channel at 0x10bcc3820>,\n",
+       " <ndi.core.Channel at 0x10bcc32e0>,\n",
+       " <ndi.core.Channel at 0x125011970>,\n",
+       " <ndi.core.Channel at 0x1250563a0>,\n",
+       " <ndi.core.Channel at 0x125056550>,\n",
+       " <ndi.core.Channel at 0x125056280>]"
       ]
      },
      "execution_count": 12,
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "[<ndi.core.Epoch at 0x11c7c0a60>, <ndi.core.Epoch at 0x11c7c0640>]"
+       "[<ndi.core.Epoch at 0x125011af0>, <ndi.core.Epoch at 0x125011100>]"
       ]
      },
      "execution_count": 14,
@@ -260,13 +260,13 @@
       "text/plain": [
        "{'_metadata': {'name': 'doc',\n",
        "  'type': 'independent',\n",
-       "  'experiment_id': 'c98c6247dad4403a9dd5d7ad29b0ac96',\n",
+       "  'experiment_id': '1a145408208842439aec7d2f2e030549',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
        "  'latest_version': True},\n",
        " '_dependencies': {},\n",
-       " '_depends_on': ['c98c6247dad4403a9dd5d7ad29b0ac96'],\n",
+       " '_depends_on': ['1a145408208842439aec7d2f2e030549'],\n",
        " 'hello': 'world'}"
       ]
      },
@@ -287,7 +287,7 @@
     {
      "data": {
       "text/plain": [
-       "{'doc': <ndi.document.Document at 0x11c7f6670>}"
+       "{'doc': <ndi.document.Document at 0x125064760>}"
       ]
      },
      "execution_count": 17,
@@ -308,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "984454e96d3f45919516dc3a665e560e\n"
+      "d6f45085e1ea4b35b261f2535d8807a2\n"
      ]
     }
    ],
@@ -414,7 +414,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_experiment',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': 'c98c6247dad4403a9dd5d7ad29b0ac96',\n",
+       "  'experiment_id': '1a145408208842439aec7d2f2e030549',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
@@ -446,7 +446,7 @@
       "text/plain": [
        "{'_metadata': {'name': 'test_dfjslfjdkf',\n",
        "  'type': 'ndi_experiment',\n",
-       "  'experiment_id': '997c2759687e4eacac5400ac645459ae',\n",
+       "  'experiment_id': '4a5ceaa1fc514cd9a29d36cdfe924326',\n",
        "  'parent_id': '',\n",
        "  'asc_path': '',\n",
        "  'version_depth': 0,\n",
